Remove compile and run instructions from README
Removed compilation and running instructions from README.